home category view state and arguments to next screen

--- a/features/home/src/main/res/values/strings.xml
+++ b/features/home/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="home_fragment">HOME</string>
+    <string name="try_again_button">Попробуй еще раз</string>
+    <string name="error_result">Произошла какая-то ошибка!</string>
 </resources>
