--- a/features/categories/src/main/res/values/strings.xml
+++ b/features/categories/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
-
     <string name="categories_fragment">Categories</string>
+    <string name="try_again_button">Попробуй еще раз</string>
+    <string name="error_result">Произошла какая-то ошибка!</string>
 </resources>
