--- a/features/basket/src/main/res/values/strings.xml
+++ b/features/basket/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
 
     <string name="basket">BASKET</string>
     <string name="pay_button">Оплатить %s Р</string>
+    <string name="price">%s ₽</string>
+    <string name="weight">· %sг</string>
 </resources>
